--- a/html/views/Cliente.html
+++ b/html/views/Cliente.html
@@ -34,8 +34,11 @@
         </div>
         </div>
     </nav>
-
     
+    <div class="container">
+        
+    </div>
+
    
 
     <footer class="footer">
