--- a/html/views/Pacotes.html
+++ b/html/views/Pacotes.html
@@ -44,6 +44,8 @@
             <p class="card-text">Calma ai, Marreco. Pega leve com o Dadinho que o moleque é do meu conceito.
               É isso memo, moro? Também sou bicho solto</p>
             <p class="card-text"><small class="text-muted">Clique aqui para saber mais</small></p>
+            <button class="botao-compra">Comprar</button>
+
           </div>
         </div>
         <div class="card">
@@ -52,6 +54,8 @@
             <h5 class="card-title">Plano Prata(Jimi hendrix)</h5>
             <p class="card-text">Me dá licença que vou beijar o céu.</p>
             <p class="card-text"><small class="text-muted">Clique aqui para saber mais</small></p>
+            <button class="botao-compra">Comprar</button>
+
           </div>
         </div>
         <div class="card">
@@ -60,6 +64,8 @@
             <h5 class="card-title">Plano Ouro(Notorius Big)</h5>
             <p class="card-text">Não podemos mudar o mundo a menos que nos transformemos.</p>
             <p class="card-text"><small class="text-muted">Clique aqui para saber mais</small></p>
+            <button class="botao-compra">Comprar</button>
+
           </div>
         </div>
       </div>
