--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -27,3 +27,15 @@
     margin: 30px 0;
 
  }
+
+ .botao-compra {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
