--- a/html/views/Pagamento.html
+++ b/html/views/Pagamento.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/img-styles.css">
+    <link rel="stylesheet" href="../css/plugins.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -11,48 +13,110 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-              <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-              Wizzard Trip
-            </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item ">
-              <a class="nav-link" href="#">Sobre</a>
+      <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+            Wizzard Trip
+          </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Sobre <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pacotes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Entrar</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Cadastre-se</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Pacotes <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Entrar</a>
-            </li>
-          </ul>
-        </div>
-        </div>
-    </nav>
+        </ul>
+      </div>
+      </div>
+  </nav>
 
+    <div class="container">
+      <div class="row">
+      <div class="col-sm-4 m-3">
+        
+        <label for="Nome" class="form-label">Nome do titular</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Nome Sobrenome">
+        </div>
+
+        <label for="NumeroCartao" class="form-label">Numero do cartão</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+        </div>
+
+        <label for="Validade" class="form-label">Validade</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="05/2021">
+        </div>
+
+        <label for="CVV" class="form-label">CVV</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="000">
+        </div>
+
+        <label for="Parcelas" class="form-label">Parcelas</label>
+        <div class="input-group mb-3">
+          <select class="form-select" id="inputParcelas">
+            <option selected>1x</option>
+            <option value="1">2x</option>
+            <option value="2">3x</option>
+            <option value="3">4x</option>
+          </select>
+
+          <div class="botao-compra-pagamento">
+          <button type="button" class="btn btn-primary">Comprar</button>
+          </div>
+        </div>
+
+
+
+      </div>
+
+      <div class="col-sm-7 m-3 text-right">
+          <h4 class="mb-3">Valores Finais</h4>
+          <h6 class="mb-3">R$ 99,99</h6>
+
+          <div class="d-flex flex-column">
+            <h4 class="mb-3">Informações do plano escolhido</h4>
+            <h6 class="mb-3">Plano Prata</h6>
+            <h6 class="mb-3">Viagens Nacionais</h6>
+
+          </div>
+      </div>
+
+        </div>
+      </div>
     
+
    
 
     <footer class="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4">
-                    <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-sm-4">
+                  <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
+              </div>
+              <div class="col-sm-4">
+              </div>
+              <div class="col-sm-4">
+                <div class="d-flex flex-row">
+                  <p class="m-3">FACEBOOK</p>
+                  <p class="m-3">INSTAGRAM</p>
                 </div>
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-4">
-                    <p>FACEBOOK</p>
-                    <p>INSTAGRAM</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+              </div>
+          </div>
+      </div>
+  </footer>
 
   </body>
 </html>
