--- a/html/views/Home.html
+++ b/html/views/Home.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/img-styles.css">
+    <link rel="stylesheet" href="../css/plugins.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -98,21 +100,67 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4">
-                    <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
-                </div>
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-4">
-                    <p>FACEBOOK</p>
-                    <p>INSTAGRAM</p>
+  <div class="box-contato">
+    <div class="container">
+        <h1 class="ajuda-contato">Fale com a gente </h1>
+        <h4>Tire suas dúvidas</h4>
+      <div class="form-row">
+            <div class="col-sm-6">
+
+              <label for="NumeroCartao" class="form-label">Nome</label>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+              </div>
+
+              <label for="NumeroCartao" class="form-label">Email</label>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+              </div>
+
+              <label for="NumeroCartao" class="form-label">Assunto</label>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+              </div>
+
+              <label for="NumeroCartao" class="form-label">Descrição</label>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+              </div>
+
+          <button type="button" class="btn btn-primary mb-5">Enviar</button>
+
+            </div>
+            <div class="col-sm-6">
+              <div class="row m-5 text-center">
+                <div class="col-sm-12">
+                    <h4>Horário de atendimento</h4>
+                    <p>De segunda à sexta-feira</p>
+                    <p>Das 9h às 18h </p>
                 </div>
             </div>
-        </div>
-    </footer>
+            </div>
+      </div>  
+    </div>
+  </div>
+
+
+    <footer class="footer">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-sm-4">
+                  <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
+              </div>
+              <div class="col-sm-4">
+              </div>
+              <div class="col-sm-4">
+                <div class="d-flex flex-row">
+                  <p class="m-3">FACEBOOK</p>
+                  <p class="m-3">INSTAGRAM</p>
+                </div>
+              </div>
+          </div>
+      </div>
+  </footer>
 
   </body>
 </html>
