--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,3 +1,55 @@
+/* Template */
+
+/* color: rgb(0,1,253); */
+
+body{
+  background-color: #ebebeb !important;
+}
+
+/* Nav */
+
+.header{
+  background: rgb(122, 122, 150);
+}
+
+.branco{
+  color: #fff !important;
+}
+
+/* Footer */
+
+.footer {
+background: rgb(122, 122, 150);
+width: 100%;
+height: auto;
+bottom:0;
+}
+
+.absoluto{
+  position:absolute;
+}
+
+.footer p {
+margin: 20px 0;
+color: #fff;
+text-align: center;
+font-weight: 500;
+}
+
+.rede-social {
+  cursor: pointer;
+}
+
+/* Home */
+
+.gradiente{
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,70));
+}
+
+.saiba-mais{
+  cursor: pointer;
+}
+
 .sobre-nos {
     background-color: rgb(122, 122, 150);
     margin: 30px 0;
@@ -5,36 +57,55 @@
     color: #fff;
   }
 
-  .box-contato{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-  }
-
-
-  .footer {
-    background: rgb(122, 122, 150);
-    width: 100%;
-    height: auto;
-  }
-  
-  .footer p {
-    margin: 20px 0;
+  .box-contato {
     color: #fff;
-    text-align: center;
-    font-weight: 500;
+    position: relative;
   }
+  .box-contato:before {
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url("../img/trip-1.png");
+    background-size: cover;
+    background-position: center;
+    filter:contrast(110%) blur(4px);
+    }
+
+ /* Entrar */
 
  .esqueceu{
     margin: 30px 0;
 
  }
 
+ /* Pacotes */
+
  .botao-compra-pacotes {
     width: 100%;
   }
 
+  .bronze{
+    color: chocolate;
+  }
+
+  .prata{
+    color: dimgray;
+  }
+
+  .ouro{
+    color: gold;
+  }
+
+/* Pagamento */
 
   .botao-compra-pagamento{
     margin-left: 13rem!important;
   }
+
+
+
+
 
