--- a/html/views/Home.html
+++ b/html/views/Home.html
@@ -9,31 +9,31 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <title>Wizzard Trip</title>
+    <title>Wizzard Trip | Clube de assinatura de viagens</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <nav class="navbar navbar-expand-lg navbar-light header">
         <div class="container">
-            <a class="navbar-brand" href="#">
-              <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-              Wizzard Trip
+            <a class="navbar-brand hvr-grow" href="#">
+              <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top" alt="">
             </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Sobre <span class="sr-only">(current)</span></a>
+            <li class="nav-item nav-pills pr-2">
+              <a class="nav-link hvr-back-pulse branco active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pacotes</a>
+            <li class="nav-item nav-pills pr-2">
+              <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Entrar</a>
+            <li class="nav-item nav-pills pr-2">
+              <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cadastre-se</a>
+            <li class="nav-item nav-pills pr-2">
+                <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
               </li>
           </ul>
         </div>
@@ -47,26 +47,29 @@
               <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
               <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
-            <div class="carousel-inner">
+            <div class="carousel-inner ">
               <div class="carousel-item active">
-                <img src="../img/home-3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                <img src="../img/rio.jpg" class="d-block w-100 " alt="...">
+                <div class="carousel-caption d-none d-md-block gradiente">
+                  <h1>Plano Bronze</h1>
+                  <h4>Nosso plano de Viagens locais dentro do território nacional</h4>
+                  <small class="text-muted saiba-mais">Clique aqui para saber mais</small>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/home-1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                <img src="../img/peru.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block gradiente">
+                  <h1>Plano Prata</h1>
+                  <h4>Nossa opção com viagens internacionais dentro do território da America do Sul</h4>
+                  <small class="text-muted saiba-mais">Clique aqui para saber mais</small>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/home-2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                <img src="../img/paris.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block gradiente">
+                  <h1>Plano Ouro</h1>
+                  <h4>Nosso melhor plano com viagens Internarcionais para qualquer lugar do mundo</h4>
+                  <small class="text-muted saiba-mais">Clique aqui para saber mais</small>
                 </div>
               </div>
             </div>
@@ -81,7 +84,7 @@
           </div>
     </div>
 
-    <div class="sobre-nos">
+    <div class="sobre-nos mb-0">
         <div class="container">
             <h1>O que é</h1>
             <div class="row">
@@ -102,40 +105,39 @@
 
   <div class="box-contato">
     <div class="container">
-        <h1 class="ajuda-contato">Fale com a gente </h1>
-        <h4>Tire suas dúvidas</h4>
       <div class="form-row">
-            <div class="col-sm-6">
-
-              <label for="NumeroCartao" class="form-label">Nome</label>
+            <div class="col-sm-6 mt-5">
+              <label for="NomeContato" class="form-label">Nome</label>
               <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+                <input type="text" class="form-control" placeholder="Insira seu nome">
               </div>
 
-              <label for="NumeroCartao" class="form-label">Email</label>
+              <label for="EmailContato" class="form-label">Email</label>
               <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+                <input type="text" class="form-control" placeholder="email@dominio.com">
               </div>
 
-              <label for="NumeroCartao" class="form-label">Assunto</label>
+              <label for="AssuntoContato" class="form-label">Assunto</label>
               <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+                <input type="text" class="form-control" placeholder="">
               </div>
 
-              <label for="NumeroCartao" class="form-label">Descrição</label>
+              <label for="DescricaoContato" class="form-label">Descrição</label>
               <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="0000 0000 0000 0000">
+                <textarea class="form-control" rows="4"></textarea>
               </div>
 
-          <button type="button" class="btn btn-primary mb-5">Enviar</button>
+            <button type="button" class="btn btn-primary mb-5">Enviar</button>
 
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 mt-5">
               <div class="row m-5 text-center">
                 <div class="col-sm-12">
+                  <h1>Fale com a gente </h1>
+
                     <h4>Horário de atendimento</h4>
-                    <p>De segunda à sexta-feira</p>
-                    <p>Das 9h às 18h </p>
+                    <h6>De segunda à sexta-feira</h6>
+                    <h6>Das 9h às 18h </h6>
                 </div>
             </div>
             </div>
@@ -146,7 +148,7 @@
 
     <footer class="footer">
       <div class="container-fluid">
-          <div class="row">
+          <div class="row d-flex flex-row align-items-center">
               <div class="col-sm-4">
                   <p>© 2020 Wizzard Trip. Todos os direitos reservados.</p>
               </div>
@@ -154,8 +156,8 @@
               </div>
               <div class="col-sm-4">
                 <div class="d-flex flex-row">
-                  <p class="m-3">FACEBOOK</p>
-                  <p class="m-3">INSTAGRAM</p>
+                  <p class="rede-social m-3"><img src="../img/fb.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
+                  <p class="rede-social m-3"><img src="../img/inst.png" class="img-social hvr-grow border-0 rounded-3" alt="..." /></p>
                 </div>
               </div>
           </div>
