--- a/html/views/Cliente.html
+++ b/html/views/Cliente.html
@@ -59,9 +59,8 @@
 
         <div class="col-sm-6 text-right">
             <h4 class="mb-3">Sobre seu plano</h4>
-            <h6 class="mb-3">Plano atual: Prata</h6>
-            <h6 class="mb-3">Ativo<img src="../img/check.png" class="img-icon border-0 rounded-3" alt="..." /></h6>
-            <h6 class="mb-3">Atualize seu plano<img src="../img/update.png" class="img-icon border-0 rounded-3" alt="..." /></h6>
+            <h6 class="mb-3 prata">Plano atual: Prata</h6>
+            <h6 class="mb-3">Status: Ativo<img src="../img/check-planos.png" class="img-icon border-0 rounded-3" alt="..." /></h6>
         </div>
       </div>
       <div class="row mb-5">
@@ -90,9 +89,9 @@
 
         </div>
         <div class="col-sm-6 text-right">
-          <h4 class="mb-3">Informações de pagamento</h4>
-          <h6 class="mb-3">Atualize a forma de pagamento<img src="../img/pay.png" class="img-icon border-0 rounded-3" alt="..." /></h6>
-          <h6 class="mb-3">Veja o Historico de cobrança<img src="../img/wallet.png" class="img-icon border-0 rounded-3" alt="..." /></h6>
+          <h5 class="d-block mb-3 hvr-grow pointer">Atualize seu plano<img src="../img/update.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
+          <h5 class="d-block mb-3 hvr-grow pointer">Atualize a forma de pagamento<img src="../img/pay.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
+          <h5 class="d-block mb-3 hvr-grow pointer">Veja o Historico de cobrança<img src="../img/wallet.png" class="img-icon border-0 rounded-3" alt="..." /></h5>
         </div>
       </div>
     </div>
