--- a/html/views/Pacotes.html
+++ b/html/views/Pacotes.html
@@ -44,31 +44,30 @@
 
     <div class="card-group">
         <div class="card">
-          <img src="../img/plano-1.png" class="card-img-top img-pacote" alt="...">
+          <img src="../img/rio.jpg" class="card-img-top img-pacote" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Plano Bronze(dadinho)</h5>
-            <p class="card-text">Pega leve com o Dadinho que o moleque é do meu conceito.
-              É isso memo, moro?</p>
+            <h5 class="card-title">Plano Bronze</h5>
+            <p class="card-text">Este plano garante uma viagem em território Brasileiro</p>
               <p class="card-text"><small class="text-muted">R$256,87 /mês</small></p>
             <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
 
           </div>
         </div>
         <div class="card">
-          <img src="../img/plano-2.jpg" class="card-img-top img-pacote" alt="...">
+          <img src="../img/peru.jpg" class="card-img-top img-pacote" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Plano Prata(Jimi hendrix)</h5>
-            <p class="card-text">Me dá licença que vou beijar o céu. E mais descubra</p>
+            <h5 class="card-title">Plano Prata</h5>
+            <p class="card-text">Este plano garante uma viagem dentro da America Latina</p>
             <p class="card-text"><small class="text-muted">R$368,87 /mês</small></p>
             <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
 
           </div>
         </div>
         <div class="card">
-          <img src="../img/plano-3.jpg" class="card-img-top img-pacote" alt="...">
+          <img src="../img/paris.jpg" class="card-img-top img-pacote" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Plano Ouro(Notorius Big)</h5>
-            <p class="card-text">Não podemos mudar o mundo a menos que nos transformemos.</p>
+            <h5 class="card-title">Plano Ouro</h5>
+            <p class="card-text">Este plano garante uma viagem internacional para qualquer lugar do mundo</p>
             <p class="card-text"><small class="text-muted">R$598,47 /mês</small></p>
             <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
 
