--- a/html/views/Home.html
+++ b/html/views/Home.html
@@ -53,7 +53,7 @@
                 <div class="carousel-caption d-none d-md-block gradiente">
                   <h1>Plano Bronze</h1>
                   <h4>Nosso plano de Viagens locais dentro do território nacional</h4>
-                  <small class="text-muted saiba-mais">Clique aqui para saber mais</small>
+                  <small class="text-muted pointer">Clique aqui para saber mais</small>
                 </div>
               </div>
               <div class="carousel-item">
@@ -61,7 +61,7 @@
                 <div class="carousel-caption d-none d-md-block gradiente">
                   <h1>Plano Prata</h1>
                   <h4>Nossa opção com viagens internacionais dentro do território da America do Sul</h4>
-                  <small class="text-muted saiba-mais">Clique aqui para saber mais</small>
+                  <small class="text-muted pointer">Clique aqui para saber mais</small>
                 </div>
               </div>
               <div class="carousel-item">
@@ -69,7 +69,7 @@
                 <div class="carousel-caption d-none d-md-block gradiente">
                   <h1>Plano Ouro</h1>
                   <h4>Nosso melhor plano com viagens Internarcionais para qualquer lugar do mundo</h4>
-                  <small class="text-muted saiba-mais">Clique aqui para saber mais</small>
+                  <small class="text-muted pointer">Clique aqui para saber mais</small>
                 </div>
               </div>
             </div>
