--- a/html/views/Home.html
+++ b/html/views/Home.html
@@ -48,28 +48,28 @@
               <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner ">
-              <div class="carousel-item active">
+              <div class="carousel-item gradiente active">
                 <img src="../img/rio.jpg" class="d-block w-100 " alt="...">
-                <div class="carousel-caption d-none d-md-block gradiente">
+                <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Bronze</h1>
                   <h4>Nosso plano de Viagens locais dentro do território nacional</h4>
-                  <small class="text-muted pointer">Clique aqui para saber mais</small>
+                  <small class="text-muted hvr-grow pointer">Clique aqui para saber mais</small>
                 </div>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item gradiente">
                 <img src="../img/peru.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block gradiente">
+                <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Prata</h1>
                   <h4>Nossa opção com viagens internacionais dentro do território da America do Sul</h4>
-                  <small class="text-muted pointer">Clique aqui para saber mais</small>
+                  <small class="text-muted hvr-grow pointer">Clique aqui para saber mais</small>
                 </div>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item gradiente">
                 <img src="../img/paris.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block gradiente">
+                <div class="carousel-caption d-none d-md-block">
                   <h1>Plano Ouro</h1>
                   <h4>Nosso melhor plano com viagens Internarcionais para qualquer lugar do mundo</h4>
-                  <small class="text-muted pointer">Clique aqui para saber mais</small>
+                  <small class="text-muted hvr-grow  pointer">Clique aqui para saber mais</small>
                 </div>
               </div>
             </div>
