--- a/html/views/Cadastro.html
+++ b/html/views/Cadastro.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link hvr-back-pulse branco" href="#">Home </a>
           </li>
           <li class="nav-item nav-pills pr-2">
             <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
@@ -33,7 +33,7 @@
             <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
+              <a class="nav-link hvr-back-pulse branco active" href="#">Cadastre-se <span class="sr-only">(current)</span></a>
             </li>
         </ul>
       </div>
