--- a/html/views/Entrar.html
+++ b/html/views/Entrar.html
@@ -24,13 +24,13 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link hvr-back-pulse branco" href="#">Home</a>
           </li>
           <li class="nav-item nav-pills pr-2">
             <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
+            <a class="nav-link hvr-back-pulse branco active" href="#">Entrar <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item nav-pills pr-2">
               <a class="nav-link hvr-back-pulse branco" href="#">Cadastre-se</a>
