--- a/html/views/Pagamento.html
+++ b/html/views/Pagamento.html
@@ -44,6 +44,12 @@
       <div class="row">
       <div class="col-sm-4 m-3">
         
+
+        <label for="Nome" class="form-label">CPF</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="123.234.567-89">
+        </div>
+
         <label for="Nome" class="form-label">Nome do titular</label>
         <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="Nome Sobrenome">
@@ -101,7 +107,7 @@
 
    
 
-      <footer class="footer absoluto">
+      <footer class="footer">
         <div class="container-fluid">
             <div class="row d-flex flex-row align-items-center">
                 <div class="col-sm-4">
