--- a/html/views/Cadastro.html
+++ b/html/views/Cadastro.html
@@ -46,17 +46,30 @@
     <form>
         <h4>Quero ser cliente</h4>
         <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
+          <label for="campoNome">Nome completo</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="campoNome">Telefone</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="campoNome">Endereço</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="campoEmail">Email</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-
+          <label for="campoSenha">Senha</label>
+          <input type="password" class="form-control">
         </div>
-
+        <div class="form-group">
+          <label for="campoConfirmaSenha">Confirme sua senha</label>
+          <input type="password" class="form-control">
+        </div>
         <button type="submit" class="btn btn-primary">Cadastrar</button>
-
       </form>
         </div>
 
@@ -64,7 +77,7 @@
     </div>
    
 
-    <footer class="footer absoluto">
+    <footer class="footer">
       <div class="container-fluid">
           <div class="row d-flex flex-row align-items-center">
               <div class="col-sm-4">
