--- a/html/views/Pacotes.html
+++ b/html/views/Pacotes.html
@@ -47,7 +47,9 @@
           <img src="../img/rio.jpg" class="card-img-top img-pacote" alt="...">
           <div class="card-body">
             <h5 class="card-title">Plano Bronze</h5>
-            <p class="card-text">Este plano garante uma viagem em território Brasileiro</p>
+            <p class="card-text">Para os amantes de viagens nacionais oferecemos o que o Brasil tem de melhor 
+              desde suas praias em vários cantos do País até pontos turísticos que vai de 
+              Cristo Redentor até as cataratas do Iguaçu</p>
               <p class="card-text"><small class="text-muted">R$256,87 /mês</small></p>
             <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
 
@@ -57,7 +59,8 @@
           <img src="../img/peru.jpg" class="card-img-top img-pacote" alt="...">
           <div class="card-body">
             <h5 class="card-title">Plano Prata</h5>
-            <p class="card-text">Este plano garante uma viagem dentro da America Latina</p>
+            <p class="card-text">Escolher a América Latina como seu plano é garantia de encontrar lugares fascinantes. 
+              De praias a desertos, de ilhas a cidades históricas passando por sítios arqueológicos de importância histórica única.</p>
             <p class="card-text"><small class="text-muted">R$368,87 /mês</small></p>
             <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
 
@@ -67,7 +70,8 @@
           <img src="../img/paris.jpg" class="card-img-top img-pacote" alt="...">
           <div class="card-body">
             <h5 class="card-title">Plano Ouro</h5>
-            <p class="card-text">Este plano garante uma viagem internacional para qualquer lugar do mundo</p>
+            <p class="card-text">Não tenha limites e viaje o mundo todo, seja uma viagem na Europa ou até mesmo no continente asiático, 
+              nós oferecemos o que o mundo tem de melhor para você. Com viagens inesquecíveis ao redor do mundo.</p>
             <p class="card-text"><small class="text-muted">R$598,47 /mês</small></p>
             <button class="btn btn-primary botao-compra-pacotes">Comprar</button>
 
