--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,25 +1,39 @@
 /* Template */
 
-/* color: rgb(0,1,253); */
 
 body{
-  background-color: #ebebeb !important;
+  background-color: #f1f1f1  !important;
 }
+
+button{
+  background-color: #7C4DFF !important;
+  border-color: #7C4DFF !important;
+}
+
 
 /* Nav */
 
 .header{
-  background: rgb(122, 122, 150);
+  background: #0097A7;
 }
 
 .branco{
-  color: #fff !important;
+  color: #fcfcfc !important;
+}
+
+.roxo{
+  background-color: #7C4DFF !important;
+  border-color: #7C4DFF !important;
+}
+
+.black-color{
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(107deg) brightness(104%) contrast(98%);
 }
 
 /* Footer */
 
 .footer {
-background: rgb(122, 122, 150);
+background: #0097A7;
 width: 100%;
 height: auto;
 bottom:0;
@@ -31,7 +45,7 @@ bottom:0;
 
 .footer p {
 margin: 20px 0;
-color: #fff;
+color: #FFFFFF;
 text-align: center;
 font-weight: 500;
 }
@@ -73,14 +87,14 @@ font-weight: 500;
 }
 
 .sobre-nos {
-    background-color: rgb(122, 122, 150);
+    background-color: #0097A7;
     margin: 30px 0;
     padding: 30px 0;
-    color: #fff;
+    color: #FFFFFF;
   }
 
   .box-contato {
-    color: #fff;
+    color: #FFFFFF;
     position: relative;
   }
   .box-contato:before {
