--- a/html/views/Cadastro.html
+++ b/html/views/Cadastro.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light header">
       <div class="container">
           <a class="navbar-brand hvr-grow" href="#">
-            <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top" alt="">
+            <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top black-color" alt="">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco" href="#">Home </a>
+            <a class="nav-link hvr-back-pulse branco " href="#">Home </a>
           </li>
           <li class="nav-item nav-pills pr-2">
             <a class="nav-link hvr-back-pulse branco" href="#">Pacotes</a>
@@ -33,7 +33,7 @@
             <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-              <a class="nav-link hvr-back-pulse branco active" href="#">Cadastre-se <span class="sr-only">(current)</span></a>
+              <a class="nav-link hvr-back-pulse branco roxo active" href="#">Cadastre-se <span class="sr-only">(current)</span></a>
             </li>
         </ul>
       </div>
