--- a/html/views/Pacotes.html
+++ b/html/views/Pacotes.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light header">
       <div class="container">
           <a class="navbar-brand hvr-grow" href="#">
-            <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top" alt="">
+            <img src="../img/logo.png" width="200" height="55" class="d-inline-block align-top black-color" alt="">
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
             <a class="nav-link hvr-back-pulse branco" href="#">Home</a>
           </li>
           <li class="nav-item nav-pills pr-2">
-            <a class="nav-link hvr-back-pulse branco active" href="#">Pacotes<span class="sr-only">(current)</span></a>
+            <a class="nav-link hvr-back-pulse branco roxo active" href="#">Pacotes<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item nav-pills pr-2">
             <a class="nav-link hvr-back-pulse branco" href="#">Entrar</a>
